@@ -16,12 +16,7 @@ Renamer::Renamer()
 
 Renamer::~Renamer()
 {
-	for (RuleBase* rule: rules)
-	{
-		delete rule;
-	}
 
-	rules.clear();
 }
 
 ///////////////////
@@ -51,42 +46,42 @@ void	Renamer::setSortMode(SortMode mode)
 
 void	Renamer::addDateRule(const std::string& format)
 {
-	rules.push_back(new RuleDate(format));
+	rules.push_back(unique_ptr<RuleBase>(new RuleDate(format)));
 }
 
 void	Renamer::addTextRule(const std::string& text)
 {
-	rules.push_back(new RuleText(text));
+	rules.push_back(unique_ptr<RuleBase>(new RuleText(text)));
 }
 
 void	Renamer::addDirRule(RuleDir::Mode mode, const std::string& separator)
 {
-	rules.push_back(new RuleDir(mode, separator));
+	rules.push_back(unique_ptr<RuleBase>(new RuleDir(mode, separator)));
 }
 
 void	Renamer::addIntegerRule(RuleInteger::Mode mode, int start, int step, int padding)
 {
-	rules.push_back(new RuleInteger(mode, start, step, padding));
+	rules.push_back(unique_ptr<RuleBase>(new RuleInteger(mode, start, step, padding)));
 }
 
 void	Renamer::addExtensionRule(RuleExtension::Mode mode, const std::string& ext)
 {
-	rules.push_back(new RuleExtension(mode, ext));
+	rules.push_back(unique_ptr<RuleBase>(new RuleExtension(mode, ext)));
 }
 
 void	Renamer::addFilenameRule(RuleFilename::Mode mode)
 {
-	rules.push_back(new RuleFilename(mode));
+	rules.push_back(unique_ptr<RuleBase>(new RuleFilename(mode)));
 }
 
 void	Renamer::addFilesizeRule(RuleFilesize::Dimension dimention, bool show_dimention, const std::string& decimal_separator)
 {
-	rules.push_back(new RuleFilesize(dimention, decimal_separator, show_dimention));
+	rules.push_back(unique_ptr<RuleBase>(new RuleFilesize(dimention, decimal_separator, show_dimention)));
 }
 
 void	Renamer::addReplaceRule(const std::string& what, const std::string& to)
 {
-	rules.push_back(new RuleReplace(what, to));
+	rules.push_back(unique_ptr<RuleBase>(new RuleReplace(what, to)));
 }
 
 
@@ -95,8 +90,10 @@ fs::path Renamer::applyRulesToOneFilename(const fs::path& _relative_path)
 {
 	std::string new_filename;
 
-	for (RuleBase* rule: rules)
+	for (unique_ptr<RuleBase>& rule: rules)
 	{
+		RuleBase* tempBasePtr = rule.get();
+
 		switch (rule->getType())
 		{
 			//RuleType {Date, Text, Integer, Extension, Dir};
@@ -110,33 +107,33 @@ fs::path Renamer::applyRulesToOneFilename(const fs::path& _relative_path)
 			}break;
 			case RuleType::Integer:
 			{
-				static_cast<RuleInteger*>(rule)->process(_relative_path);
+				static_cast<RuleInteger*>(tempBasePtr)->process(_relative_path);
 				new_filename += rule->getString();
 			}break;
 			case RuleType::Dir:
 			{
-				static_cast<RuleDir*>(rule)->process(_relative_path);
+				static_cast<RuleDir*>(tempBasePtr)->process(_relative_path);
 				new_filename += rule->getString();
 			}break;
 			case RuleType::Extension:
 			{
-				static_cast<RuleExtension*>(rule)->process(_relative_path);
+				static_cast<RuleExtension*>(tempBasePtr)->process(_relative_path);
 				new_filename += rule->getString();
 			}break;
 			case RuleType::Filename:
 			{
-				static_cast<RuleFilename*>(rule)->process(_relative_path);
+				static_cast<RuleFilename*>(tempBasePtr)->process(_relative_path);
 				new_filename += rule->getString();
 			}break;
 			case RuleType::Filesize:
 			{
 				fs::path absolute_path(source_dir / _relative_path);
-				static_cast<RuleFilesize*>(rule)->process(absolute_path);
+				static_cast<RuleFilesize*>(tempBasePtr)->process(absolute_path);
 				new_filename += rule->getString();
 			}break;
 			case RuleType::Replace:
 			{
-				static_cast<RuleReplace*>(rule)->process(new_filename);
+				static_cast<RuleReplace*>(tempBasePtr)->process(new_filename);
 				//new_filename += rule->getString();
 			}break;
 		}
@@ -173,7 +170,7 @@ void Renamer::createRenameBijection()
 	}
 }
 
-void Renamer::testRenameBijection()
+void Renamer::testRenameBijection() const
 {
 	std::map<fs::path, fs::path> result;
 	auto starting_point = rename_vector.begin();
@@ -199,7 +196,8 @@ void Renamer::testRenameBijection()
 		std::cerr << "ERROR: Filenames collision." << std::endl;
 		for (auto& element: result)
 		{
-			std::cout << "╒════════════\n│" << element.first << "\n│" << element.second << "\n╘════════════\n";
+			std::cout << "┌╼" << element.first  << "\n" <<
+						 "└╳" << element.second << "\n" << std::endl;
 		}
 		exit(EXIT_FAILURE);
 	}
@@ -238,11 +236,12 @@ void Renamer::executeRenameBijection()
 
 }
 
-void  Renamer::printRenameBijection()
+void  Renamer::printRenameBijection() const
 {
 	for (auto& element: rename_vector)
 	{
-		std::cout << "╒════════════\n│" << element.first << "\n│" << element.second << "\n╘════════════\n";
+		std::cout << "┌╼" << element.first  << "\n" <<
+					 "└►" << element.second << "\n" << std::endl;
 	}
 }
 
